Fix layout issues with company-filter on tablets.

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -40,7 +40,7 @@ html, body {
 .main-actions {
 	position: absolute;
 	width: 200px;
-	height: 190px;
+	height: 140px;
 
 	background-color: #222;
 	box-shadow: inset 0 1px 5px #111;
@@ -59,7 +59,7 @@ html, body {
 	top: 0;
 	height: 100%;
 	width: 200px;
-	padding: 190px 0 30px 0;
+	padding: 140px 0 30px 0;
 	
 	z-index: 2;
 }
